program translations: update Turkish

--- a/po/tr.po
+++ b/po/tr.po
@@ -791,7 +791,7 @@ msgstr ""
 msgid ""
 "  --regenerate-track-uids  Generate new random track UIDs instead of keeping\n"
 "                           existing ones.\n"
-msgstr ""
+msgstr "  --regenerate-track-uids  Varolanları korumak yerine yeni rastgele parça UID'leri oluşturur.\n"
 
 #: src/merge/mkvmerge.cpp:286
 #, no-c-format
