program translations: update French

--- a/po/fr.po
+++ b/po/fr.po
@@ -16089,12 +16089,12 @@ msgstr "inflateInit() a échoué. Résultat : {0}\n"
 #: src/common/kax_info.cpp:750
 #, no-c-format
 msgid "interleaved; bottom field displayed first; fields are interleaved in storage with the top line of the top field stored first"
-msgstr ""
+msgstr "entrelacé ; champ du bas affiché en premier ; les champs sont entrelacés dans le stockage avec la ligne du haut du champ du bas stockée en premier"
 
 #: src/common/kax_info.cpp:749
 #, no-c-format
 msgid "interleaved; top field displayed first; fields are interleaved in storage with the top line of the top field stored first"
-msgstr ""
+msgstr "entrelacé ; champ du haut affiché en premier ; les champs sont entrelacés dans le stockage avec la ligne du haut du champ du haut stockée en premier"
 
 #: src/propedit/change.cpp:393
 #, no-c-format, c++-format
@@ -16737,9 +16737,9 @@ msgid "tta_reader: tag_size < 0 in the c'tor. {0}\n"
 msgstr "tta_reader : tag_size < 0 dans le c'tor. {0}\n"
 
 #: src/common/kax_info.cpp:747
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "undetermined"
-msgstr "Indéterminé"
+msgstr "indéterminé"
 
 #: src/common/audio_emphasis.cpp:51
 #: src/common/audio_emphasis.cpp:55
