program translations: update Norwegian Bokmål

--- a/po/nb.po
+++ b/po/nb.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: MKVToolNix\n"
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
 "POT-Creation-Date: 2024-04-27 21:40+0200\n"
-"PO-Revision-Date: 2024-04-21 21:04+0200\n"
+"PO-Revision-Date: 2016-01-14 08:27+0000\n"
 "Last-Translator: Roger Knutsen, 2024\n"
 "Language-Team: Norwegian Bokmål (http://app.transifex.com/moritz-bunkus/mkvtoolnix/language/nb/)\n"
 "Language: nb\n"
@@ -16051,12 +16051,12 @@ msgstr "inflateInit() mislyktes. Resultat: {0}\n"
 #: src/common/kax_info.cpp:750
 #, no-c-format
 msgid "interleaved; bottom field displayed first; fields are interleaved in storage with the top line of the top field stored first"
-msgstr ""
+msgstr "sammenflettet; nederste felt vises først; felt flettes sammen i lagring, og den øverste linjen i det øverste feltet lagres først"
 
 #: src/common/kax_info.cpp:749
 #, no-c-format
 msgid "interleaved; top field displayed first; fields are interleaved in storage with the top line of the top field stored first"
-msgstr ""
+msgstr "sammenflettet; øverste felt vises først; felt flettes sammen i lagring, og den øverste linjen i det øverste feltet lagres først"
 
 #: src/propedit/change.cpp:393
 #, no-c-format, c++-format
@@ -16699,9 +16699,9 @@ msgid "tta_reader: tag_size < 0 in the c'tor. {0}\n"
 msgstr "tta_leser: tagg_størrelse < 0 i c'tor-en. {0}\n"
 
 #: src/common/kax_info.cpp:747
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "undetermined"
-msgstr "Ubestemt"
+msgstr "ubestemt"
 
 #: src/common/audio_emphasis.cpp:51
 #: src/common/audio_emphasis.cpp:55
