--- a/po/ru.po
+++ b/po/ru.po
@@ -16502,9 +16502,9 @@ msgid "tta_reader: tag_size < 0 in the c'tor. {0}\n"
 msgstr "Считыватель TTA: tag_size < 0 в конструкторе. {0}\n"
 
 #: src/common/kax_info.cpp:747
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "undetermined"
-msgstr "Неопределённый"
+msgstr "неопределено"
 
 #: src/common/audio_emphasis.cpp:51
 #: src/common/audio_emphasis.cpp:55
