--- a/packaging/debian/changelog
+++ b/packaging/debian/changelog
@@ -1,3 +1,9 @@
+mkvtoolnix (84.0-0~bunkus01) noble; urgency=low
+
+  * New version.
+
+ -- Moritz Bunkus <moritz@bunkus.org>  Sun, 28 Apr 2024 12:18:30 +0200
+
 mkvtoolnix (83.0-0~bunkus01) mantic; urgency=low
 
   * New version.
