--- a/doc/man/po4a/po/be.po
+++ b/doc/man/po4a/po/be.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2024-03-11 19:54+0100\n"
+"POT-Creation-Date: 2024-04-28 12:18+0200\n"
 "PO-Revision-Date: 2016-02-03 20:53+0000\n"
 "Last-Translator: Prydespar <prydespar@gmail.com>, 2024\n"
 "Language-Team: Belarusian (http://app.transifex.com/moritz-bunkus/mkvtoolnix/language/be/)\n"
@@ -25,8 +25,8 @@ msgstr "mkvextract"
 #: doc/man/mkvmerge.xml:6
 #: doc/man/mkvpropedit.xml:6
 #: doc/man/mkvtoolnix-gui.xml:6
-msgid "83.0"
-msgstr "83.0"
+msgid "84.0"
+msgstr "84.0"
 
 #. type: Content of the date entity
 #: doc/man/mkvextract.xml:7
@@ -34,7 +34,9 @@ msgstr "83.0"
 #: doc/man/mkvmerge.xml:7
 #: doc/man/mkvpropedit.xml:7
 #: doc/man/mkvtoolnix-gui.xml:7
-msgid "2024-03-10"
+#, fuzzy
+#| msgid "2024-03-10"
+msgid "2024-04-28"
 msgstr "2024-03-10"
 
 #. type: Content of the mkvmerge entity
