program translations: update Italian

--- a/po/it.po
+++ b/po/it.po
@@ -8,7 +8,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
 "POT-Creation-Date: 2024-04-27 21:40+0200\n"
 "PO-Revision-Date: 2016-01-14 08:27+0000\n"
-"Last-Translator: ROBERTO BORIOTTI <roberto.boriotti@canon.it>, 2021-2024\n"
+"Last-Translator: Vincenzo Reale <vinx.reale@gmail.com>, 2018\n"
 "Language-Team: Italian (http://www.transifex.com/moritz-bunkus/mkvtoolnix/"
 "language/it/)\n"
 "Language: it\n"
@@ -803,6 +803,8 @@ msgid ""
 "  --regenerate-track-uids  Generate new random track UIDs instead of keeping\n"
 "                           existing ones.\n"
 msgstr ""
+"  --regenerate-track-uids Genera nuovi UID traccia casuali invece di mantenere\n"
+"quelli esistenti.\n"
 
 #: src/merge/mkvmerge.cpp:286
 #, no-c-format
@@ -6369,7 +6371,7 @@ msgstr "Enfasi applicata all'audio che deve essere invertito dal lettore per ott
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2259
 #, no-c-format
 msgid "Emphasis:"
-msgstr "Enfasi"
+msgstr "Enfasi:"
 
 #: src/common/hacks.cpp:64
 #, no-c-format
@@ -16030,7 +16032,7 @@ msgstr "forma sottotag lingua estesi"
 #: src/mkvtoolnix-gui/chapter_editor/tool.cpp:204
 #, no-c-format
 msgid "ffmpeg metadata files"
-msgstr "File metadati ffmpeg"
+msgstr "file metadati ffmpeg"
 
 #: src/merge/output_control.cpp:429
 #, no-c-format, c++-format
@@ -16122,12 +16124,12 @@ msgstr "inflateInit() non riuscita. Risultato: {0}\n"
 #: src/common/kax_info.cpp:750
 #, no-c-format
 msgid "interleaved; bottom field displayed first; fields are interleaved in storage with the top line of the top field stored first"
-msgstr ""
+msgstr "intervallato; campo inferiore visualizzato per primo; i campi vengono intervallati in memoria con la riga superiore del campo superiore memorizzata per prima"
 
 #: src/common/kax_info.cpp:749
 #, no-c-format
 msgid "interleaved; top field displayed first; fields are interleaved in storage with the top line of the top field stored first"
-msgstr ""
+msgstr "intervallato; campo superiore visualizzato per primo; i campi vengono intervallati in memoria con la riga superiore del campo superiore memorizzata per prima"
 
 #: src/propedit/change.cpp:393
 #, no-c-format, c++-format
@@ -16303,7 +16305,7 @@ msgstr "valore mancante"
 #: src/mkvtoolnix-gui/forms/main_window/main_window.h:695
 #, no-c-format
 msgid "mkv&merge documentation"
-msgstr "Documentazione mkv&merge"
+msgstr "documentazione mkv&merge"
 
 #: src/extract/extract_cli_parser.cpp:104
 #, no-c-format
@@ -16770,9 +16772,9 @@ msgid "tta_reader: tag_size < 0 in the c'tor. {0}\n"
 msgstr "tta_reader: tag_size < 0 nel c'tor. {0}\n"
 
 #: src/common/kax_info.cpp:747
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "undetermined"
-msgstr "Non determinato"
+msgstr "non determinato/a"
 
 #: src/common/audio_emphasis.cpp:51
 #: src/common/audio_emphasis.cpp:55
