program translations: update Brazilian Portuguese

--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -812,6 +812,8 @@ msgid ""
 "  --regenerate-track-uids  Generate new random track UIDs instead of keeping\n"
 "                           existing ones.\n"
 msgstr ""
+"  --regenerate-track-uids  Gera novos UIDs de faixa aleatória em vez de manter\n"
+"                           os existentes.\n"
 
 #: src/merge/mkvmerge.cpp:286
 #, no-c-format
@@ -10586,9 +10588,9 @@ msgstr "Leitor Quicktime/MP4: Na faixa Track {0}, faltam alguns dados. As partí
 
 #: src/mkvtoolnix-gui/main_window/prefs_run_program_widget.cpp:202
 #: src/mkvtoolnix-gui/util/settings.cpp:319
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Quit MKVToolNix"
-msgstr "MKVToolNix &GUI"
+msgstr "Sair do MKVToolNix"
 
 #: src/common/file_types.cpp:79
 #, no-c-format
@@ -16016,9 +16018,9 @@ msgid "extended language subtags form"
 msgstr "formulário de subetiquetas de idioma estendido"
 
 #: src/mkvtoolnix-gui/chapter_editor/tool.cpp:204
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "ffmpeg metadata files"
-msgstr "Acrescentar arquivos de mídia"
+msgstr "arquivos de metadados ffmpeg"
 
 #: src/merge/output_control.cpp:429
 #, no-c-format, c++-format
@@ -16108,12 +16110,12 @@ msgstr "inflateInit() falhou. Resultado: {0}\n"
 #: src/common/kax_info.cpp:750
 #, no-c-format
 msgid "interleaved; bottom field displayed first; fields are interleaved in storage with the top line of the top field stored first"
-msgstr ""
+msgstr "intercalado; campo inferior exibido primeiro; os campos são intercalados no armazenamento com a linha superior do campo superior armazenada primeiro"
 
 #: src/common/kax_info.cpp:749
 #, no-c-format
 msgid "interleaved; top field displayed first; fields are interleaved in storage with the top line of the top field stored first"
-msgstr ""
+msgstr "intercalado; campo superior exibido primeiro; os campos são intercalados no armazenamento com a linha superior do campo superior armazenada primeiro"
 
 #: src/propedit/change.cpp:393
 #, no-c-format, c++-format
@@ -16756,9 +16758,9 @@ msgid "tta_reader: tag_size < 0 in the c'tor. {0}\n"
 msgstr "tta_reader: tamanho_tag < 0 no c'tor. {0}\n"
 
 #: src/common/kax_info.cpp:747
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "undetermined"
-msgstr "Indeterminado"
+msgstr "indeterminado"
 
 #: src/common/audio_emphasis.cpp:51
 #: src/common/audio_emphasis.cpp:55
