program translations: update Turkish

--- a/po/tr.po
+++ b/po/tr.po
@@ -16687,9 +16687,9 @@ msgid "tta_reader: tag_size < 0 in the c'tor. {0}\n"
 msgstr "tta_reader: c'tor içinde tag_size < 0. {0}\n"
 
 #: src/common/kax_info.cpp:747
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "undetermined"
-msgstr "Belirsiz"
+msgstr "belirsiz"
 
 #: src/common/audio_emphasis.cpp:51
 #: src/common/audio_emphasis.cpp:55
