program translations: update Catalan

--- a/po/ca.po
+++ b/po/ca.po
@@ -16121,12 +16121,12 @@ msgstr "inflateInit() ha fallat. Resultat: {0}\n"
 #: src/common/kax_info.cpp:750
 #, no-c-format
 msgid "interleaved; bottom field displayed first; fields are interleaved in storage with the top line of the top field stored first"
-msgstr ""
+msgstr "intercalat, primer el camp inferior, els camps s'entrellaçaran a l'emmagatzematge amb la línia superior del camp superior emmagatzemat primer"
 
 #: src/common/kax_info.cpp:749
 #, no-c-format
 msgid "interleaved; top field displayed first; fields are interleaved in storage with the top line of the top field stored first"
-msgstr ""
+msgstr "intercalat, primer el camp superior, els camps s'entrellaçaran a l'emmagatzematge amb la línia superior del camp superior emmagatzemat primer"
 
 #: src/propedit/change.cpp:393
 #, no-c-format, c++-format
@@ -16770,9 +16770,9 @@ msgid "tta_reader: tag_size < 0 in the c'tor. {0}\n"
 msgstr "tta_reader: tag_size < 0 dins el constructor. {0}\n"
 
 #: src/common/kax_info.cpp:747
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "undetermined"
-msgstr "Sense determinar"
+msgstr "sense determinar"
 
 #: src/common/audio_emphasis.cpp:51
 #: src/common/audio_emphasis.cpp:55
