program translations: update Norwegian Bokmål

--- a/po/nb.po
+++ b/po/nb.po
@@ -580,7 +580,7 @@ msgstr ""
 #: src/merge/mkvmerge.cpp:172
 #, no-c-format
 msgid "  --link                   Link splitted files.\n"
-msgstr "  --link                   Koble delte filer.\n"
+msgstr "  --link                   Koble splittede filer.\n"
 
 #: src/merge/mkvmerge.cpp:174
 #, no-c-format
@@ -2122,7 +2122,7 @@ msgstr "&Neste kapittel redigeringsfane"
 #: src/mkvtoolnix-gui/header_editor/tool.cpp:309
 #, no-c-format
 msgid "&Next header editor tab"
-msgstr "&Neste hoderedigeringsfane"
+msgstr "&Neste datahoderedigeringsfane"
 
 #: src/mkvtoolnix-gui/info/tool.cpp:226
 #, no-c-format
@@ -2172,7 +2172,7 @@ msgstr "&Åpne Matroska- eller WebM-fil"
 #: src/mkvtoolnix-gui/forms/header_editor/action_for_dropped_files_dialog.h:117
 #, no-c-format
 msgid "&Open as new tabs in the header editor"
-msgstr "&Åpne som nye faner i hodedataredigering"
+msgstr "&Åpne som nye faner i datahoderedigering"
 
 #: src/mkvtoolnix-gui/jobs/tool.cpp:411
 #: src/mkvtoolnix-gui/watch_jobs/tab.cpp:147
@@ -2220,7 +2220,7 @@ msgstr "&Forrige kapittel redigeringsfane"
 #: src/mkvtoolnix-gui/header_editor/tool.cpp:310
 #, no-c-format
 msgid "&Previous header editor tab"
-msgstr "&Forrige hoderedigeringsfane"
+msgstr "&Forrige datahoderedigeringsfane"
 
 #: src/mkvtoolnix-gui/info/tool.cpp:227
 #, no-c-format
@@ -2584,7 +2584,7 @@ msgstr "'--generate-chapters' mangler modusen.\n"
 #: src/merge/mkvmerge.cpp:2252
 #, no-c-format
 msgid "'--generate-chapters-name-template' lacks the name template.\n"
-msgstr "'--generate-chapters-name-template' mangler navn mal.\n"
+msgstr "'--generate-chapters-name-template' mangler malen\n"
 
 #: src/merge/mkvmerge.cpp:2446
 #, no-c-format
@@ -4269,7 +4269,7 @@ msgstr "Blu-ray spillelistefiler"
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2343
 #, no-c-format
 msgid "Blu-rays"
-msgstr "Blu-rays"
+msgstr "Blu-ray filmer"
 
 #: src/common/property_element.cpp:191
 #, no-c-format
@@ -4324,7 +4324,7 @@ msgstr "Bunn"
 #: src/mkvtoolnix-gui/header_editor/track_type_page.cpp:57
 #, no-c-format
 msgid "Button track %1"
-msgstr "Knapp spor %1"
+msgstr "Knappspor %1"
 
 #: src/mkvtoolnix-gui/header_editor/track_type_page.cpp:64
 #: src/mkvtoolnix-gui/merge/track.cpp:715
@@ -5420,7 +5420,7 @@ msgstr "Uttrekking av signal"
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2300
 #, no-c-format
 msgid "Cue name format:"
-msgstr "Cue navneformat:"
+msgstr "Signalnavneformat:"
 
 #: src/common/kax_element_names.cpp:231
 #, no-c-format
@@ -5577,7 +5577,7 @@ msgstr "DVB-undertekster"
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2311
 #, no-c-format
 msgid "DVD title number:"
-msgstr "DVD tittelnummer:"
+msgstr "DVD-tittelnummer:"
 
 #: src/mkvtoolnix-gui/chapter_editor/tool.cpp:191
 #: src/mkvtoolnix-gui/merge/output.cpp:546
@@ -7576,7 +7576,7 @@ msgstr "Hvis aktivert, vil målfilnavnkontrollene alltid være synlige uansett h
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:341
 #, no-c-format
 msgid "If enabled, the first tab in the \"job output\" tool will not be cleared when a new job starts."
-msgstr "Hvis den er aktivert, fjernes ikke den første fanen i \"jobbutdata\"-verktøyet når en ny jobb starter."
+msgstr "Hvis aktivert, fjernes ikke den første fanen i \"jobbutdata\"-verktøyet når en ny jobb starter."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:553
 #, no-c-format
@@ -8534,7 +8534,7 @@ msgstr "Venstre"
 #: src/mkvtoolnix-gui/forms/info/element_viewer_dialog.h:226
 #, no-c-format
 msgid "Legend:"
-msgstr "Legende:"
+msgstr "Forklaring:"
 
 #: src/mkvtoolnix-gui/info/element_highlighter.cpp:69
 #, no-c-format
@@ -9808,7 +9808,7 @@ msgstr "Åpne Matroska- eller WebM-filer"
 #: src/mkvtoolnix-gui/forms/header_editor/tool.h:179
 #, no-c-format
 msgid "Open a Matroska or WebM file via the \"header editor\" menu, the button below or drag & drop one here."
-msgstr "Åpne en Matroska- eller WebM-fil via \"hodedataredigering\"-menyen, knappen nedenfor eller dra og slipp en her."
+msgstr "Åpne en Matroska- eller WebM-fil via \"datahoderedigering\"-menyen, knappen nedenfor eller dra og slipp en her."
 
 #: src/mkvtoolnix-gui/forms/info/tool.h:179
 #, no-c-format
@@ -10100,7 +10100,7 @@ msgstr "Spillelisteelementer:"
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:269
 #, no-c-format
 msgid "Playlists & Blu-rays"
-msgstr "Spillelister og Blu-rays"
+msgstr "Spillelister og Blu-ray filmer"
 
 #: src/mkvtoolnix-gui/merge/ask_scan_for_playlists_dialog.cpp:58
 #, no-c-format
@@ -11925,7 +11925,7 @@ msgstr "Lagring av resultat i hurtigbufferen mislyktes"
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2302
 #, no-c-format
 msgid "Stretch by:"
-msgstr "Strekk ut:"
+msgstr "Strekk ut med:"
 
 #: src/common/kax_element_names.cpp:329
 #: src/mkvtoolnix-gui/header_editor/value_page.cpp:166
@@ -12511,7 +12511,7 @@ msgstr "Den korresponderende formen for utvidede språkundertagger er: %1."
 #: src/merge/output_control.cpp:1678
 #, no-c-format
 msgid "The cue entries (the index) are being written...\n"
-msgstr "Cue-oppføringene (indeksen) skrives...\n"
+msgstr "Signaloppføringene (indeksen) skrives...\n"
 
 #: src/extract/tracks.cpp:386
 #, no-c-format, c++-format
@@ -13105,7 +13105,7 @@ msgstr "Den angitte tidsstempelskaleringsfaktoren er utenfor det gyldige område
 #: src/mkvtoolnix-gui/header_editor/tab.cpp:200
 #, no-c-format
 msgid "The header values have not been modified. There is nothing to save."
-msgstr "Hodedataverdiene er ikke endret. Det er ingenting å lagre."
+msgstr "Datahodeverdiene er ikke endret. Det er ingenting å lagre."
 
 #: src/merge/connection_checks.h:38
 #, no-c-format, c++-format
@@ -13243,7 +13243,7 @@ msgstr "mkvmerges kjørbare fil ble funnet, men den kunne ikke utføres."
 #: src/mkvtoolnix-gui/util/file_identifier.cpp:83
 #, no-c-format
 msgid "The mkvmerge executable was not found."
-msgstr "Den kjørbare mkvmerge ble ikke funnet."
+msgstr "Den kjørbare mkvmerge-filen ble ikke funnet."
 
 #: src/mkvtoolnix-gui/merge/tool.cpp:390
 #, no-c-format
@@ -14817,7 +14817,7 @@ msgstr "Oppdatering av '{0}' -elementet mislyktes. Årsak:"
 #: src/mkvtoolnix-gui/gui_cli_parser.cpp:44
 #, no-c-format
 msgid "Usage"
-msgstr "Forbruk"
+msgstr "Bruk"
 
 #: src/mkvtoolnix-gui/main_window/prefs_run_program_widget.cpp:97
 #, no-c-format
