--- a/packaging/debian/changelog
+++ b/packaging/debian/changelog
@@ -1,3 +1,9 @@
+mkvtoolnix (85.0-0~bunkus01) noble; urgency=low
+
+  * New version.
+
+ -- Moritz Bunkus <moritz@bunkus.org>  Sun, 02 Jun 2024 16:06:51 +0200
+
 mkvtoolnix (84.0-0~bunkus01) noble; urgency=low
 
   * New version.
